# BinaryOptionsTools-v2

./: .gitignore  PYPI_SETUP.md  README.md  WEBSOCKET_CLIENT_REDESIGN.md  cl_instruc_creat_whl.md  todo.md
.github/workflows/: build-wheel.yml
BinaryOptionsToolsUni/: Cargo.toml  README.md  build.rs
BinaryOptionsToolsUni/docs/: API_REFERENCE.html  API_REFERENCE.md  DEMO.html  DOCUMENTATION_SUMMARY.md  INDEX.md  NEXT_STEPS.md  OVERVIEW.md  RAW_HANDLER_GUIDE.md  RAW_HANDLER_SUMMARY.md  README.md  TRADING_GUIDE.md
BinaryOptionsToolsUni/src/: error.rs  lib.rs  tracing.rs
BinaryOptionsToolsV2/: .gitignore  CI.yml  Cargo.toml  Dockerfile  LICENSE  PYTHON_API_REFERENCE.md  Readme.md  candles_eurusd_otc.csv  pyproject.toml
BinaryOptionsToolsV2/BinaryOptionsToolsV2/: __init__.py  config.py  tracing.py  validator.py
BinaryOptionsToolsV2/BinaryOptionsToolsV2/pocketoption/: __init__.py  asyncronous.py  syncronous.py
BinaryOptionsToolsV2/src/: config.rs  error.rs  lib.rs  logs.rs  pocketoption.rs  stream.rs  validator.rs
crates/binary_options_tools/: .gitignore  Cargo.toml  Readme.md  expert_options_regions.json  pocket_options_regions.json
crates/binary_options_tools/mkds/: README.md
crates/binary_options_tools/src/: error.rs  lib.rs  reimports.rs  traits.rs  validator.rs
crates/binary_options_tools/src/expertoptions/: action.rs  client.rs  connect.rs  error.rs  mod.rs  regions.rs  state.rs  types.rs
crates/binary_options_tools/src/expertoptions/modules/: keep_alive.rs  mod.rs  profile.rs
crates/binary_options_tools/src/pocketoption/: candle.rs  connect.rs  error.rs  mod.rs  pocket_client.rs  regions.rs  ssid.rs  state.rs  types.rs  utils.rs
crates/binary_options_tools/src/pocketoption/modules/: assets.rs  balance.rs  deals.rs  get_candles.rs  keep_alive.rs  mod.rs  raw.rs  server_time.rs  subscriptions.rs  trades.rs
crates/binary_options_tools/src/utils/: mod.rs  serialize.rs
crates/binary_options_tools/tests/: assets.txt  assets2.json  assets3.json  data.json  expert_multiple_actions.json  fail_open_pending_order.json  fail_open_pending_order2.json  load_history_period.json  load_history_period2.json  pocketoption_client_tests.rs  profile.json  raw_module_tests.rs  success_close_order.json  success_open_order.json  success_open_pending_order.json  success_update_pending.json  test.json  test_close_order.txt  test_demo.json  update_close_order.json  update_closed_deals.txt  update_history_new.json  update_history_new_fast.json  update_opened_deals.txt  validator_tests.rs
crates/core/: Cargo.toml  readme.md
crates/core-pre/: Cargo.toml  README.md
crates/core-pre/diagrams/: architecture.txt  diagram.txt
crates/core-pre/docs/: testing-framework.md
crates/core-pre/examples/: basic_connector_usage.rs  echo_client.rs  middleware_example.rs  testing_echo_client.rs
crates/core-pre/src/: builder.rs  callback.rs  client.rs  connector.rs  error.rs  lib.rs  middleware.rs  reimports.rs  signals.rs  statistics.rs  testing.rs  traits.rs
crates/core-pre/src/utils/: mod.rs  stream.rs  time.rs  tracing.rs
crates/core-pre/tests/: middleware_tests.rs  testing_wrapper_tests.rs
crates/core/data/: batching.rs  client2.rs  client_enhanced.rs  connection.rs  events.rs  websocket_config.rs
crates/core/src/: constants.rs  error.rs  lib.rs  reimports.rs
crates/core/src/general/: client.rs  mod.rs  send.rs  types.rs  validate.rs
crates/core/src/utils/: time.rs  tracing.rs
crates/macros/: ActionImpl_README.md  Cargo.toml  readme.md
crates/macros/examples/: action_example.rs
crates/macros/src/: action.rs  config.rs  deserialize.rs  lib.rs  region.rs  serialize.rs  timeout.rs
crates/macros/src/impls/: config_impl.rs
data/: OTC-assets.txt
docker/android/: Dockerfile
docker/linux/: Dockerfile
docs/: .nojekyll  DEPLOYMENT.md  DOCUMENTATION_SUMMARY.md  ENHANCEMENT_SUMMARY.md  IMPROVEMENTS.md  README.md  _config.yml  api.html  architecture-dataflow.md  examples.html  index.html  javascript.html  pocketoption_docs.html  python.html  raw-module.md  robots.txt  rust.html  sitemap.xml
docs/assets/css/: animations.css  code-highlight.css  main.css
docs/assets/js/: animations.js  api.js  code-highlight.js  examples.js  main.js
examples/javascript/: .gitignore  check_win.js  create_raw_iterator.js  create_raw_order.js  get_balance.js  get_candles.js  get_deal_end_time.js  history.js  logs.js  payout.js  raw_send.js  stream.js  stream_chunked.js  validator.js
examples/python/: .gitignore  test_raw_handler.py
examples/python/async/: check_win.py  subscribe_symbol_timed.py  trade.py
examples/python/sync/: check_win.py
tutorials/: How to get PocketOption SSID.txt  How to get SSID.docx
wheels/: BinaryOptionsToolsV2-0.2.1-cp38-abi3-win_amd64.whl
