[package]
name = "binary_options_tools_uni"
version = "0.1.0"
edition = "2024"
authors = ["ChipaDevTeam"]
repository = "https://github.com/ChipaDevTeam/BinaryOptionsTools-v2"
homepage = "https://chipadevteam.github.io/BinaryOptionsTools-v2/"
documentation = "https://chipadevteam.github.io/BinaryOptionsTools-v2/"
description = "UniFFI bindings for binary-options-tools. Enables multi-language support (Kotlin, Swift, Python) for cross-platform binary options trading automation."
keywords = ["binary-options", "uniffi", "cross-platform", "trading"]
categories = ["api-bindings"]
license-file = "../LICENSE"

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi_bindgen.rs"


[lib]
name = "binary_options_tools_uni"
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = { version = "0.30.0", features = ["cli"] }
binary_options_tools = { path = "../crates/binary_options_tools" }
tokio = { version = "1.47.1", features = ["full"] }
thiserror = "2.0.14"
rust_decimal = "1.37.2"
futures-util = "0.3.31"
uuid = { version = "1.10.0", features = ["v4", "serde", "fast-rng"] }
regex = "1.12.2"

[build-dependencies]
uniffi = { version = "0.30.0", features = ["build"] }
