[package]
name = "binary-options-tools-core-pre"
version = "0.1.1"
edition = "2024"
authors = ["ChipaDevTeam"]
repository = "https://github.com/ChipaDevTeam/BinaryOptionsTools-v2"
homepage = "https://chipadevteam.github.io/BinaryOptionsTools-v2/"
documentation = "https://chipadevteam.github.io/BinaryOptionsTools-v2/"
readme = "README.md"
description = "Low-level WebSocket client and protocol handler for binary options trading. Core foundation providing connection management, message routing, and async communication primitives."
keywords = ["binary-options", "websocket", "trading", "async", "tokio"]
categories = ["asynchronous", "network-programming", "api-bindings"]
license-file = "../../LICENSE"

[dependencies]
async-trait = "0.1.88"
futures-util = "0.3"
kanal = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json"] }
