[package]
name = "binary-options-tools-macros"
version = "0.1.4"
edition = "2024"
authors = ["ChipaDevTeam"]
repository = "https://github.com/ChipaDevTeam/BinaryOptionsTools-v2"
homepage = "https://chipadevteam.github.io/BinaryOptionsTools-v2/"
documentation = "https://chipadevteam.github.io/BinaryOptionsTools-v2/"
readme = "readme.md"
description = "Procedural macros for the binary-options-tools crate. Provides code generation and compile-time utilities for trading platform integrations."
keywords = ["binary-options", "macros", "proc-macro", "trading"]
categories = ["development-tools::procedural-macro-helpers"]
license-file = "../../LICENSE"

[lib]
proc-macro = true

[dependencies]
# binary-options-tools-core = { path = "../core", version = "0.1.5" }

anyhow = "1.0.98"
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde_json = "1.0.140"
syn = "2.0.101"
tokio = { version = "1.44.2", default-features = false, features = ["macros"] }
tracing = "0.1.41"
darling = { version = "0.21.1", features = ["serde"] }
url = { version = "2.5.4", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }

# raw_core = { path = "../raw_core" }

[dev-dependencies]
serde = "1.0.219"
